CHANGES:

3/21/2014
- GreatWorks: replace the parser of vector graphic documents by a parser
  which generates graphic documents + correct to code to reconstruct arc/pie

3/19/2014
- BeagleWorks/WordPerfect Work: add parser of vector graphic documents

3/13/2014
- SuperPaint: add a parser of drawing SuperPaint v1 document

3/7/2014
- SuperPaint: add a parser of Paint SuperPaint v1 document

3/5/2014:
- AppleWorks/ClarisWorks: make the parser of the paint documents
   a parser which creates graphic (instead of a text document).
- MacPaint: add a parser of MacPaint document + move the code
   to parse GreatWorks v1 paint files (which have the same format)
   in this parser.
3/4/2014:
- GreatWorks: add parser of paint documents
3/3/2014:
- BeagleWorks/WordPerfect Work: add parser of paint documents
2/28/2014:
- transform MWAWGraphicListener into a listener able to export draw files

2/21/2014:
- Claris Resolve: add a spreadsheet parser (only export spreadsheet's content
  but not the frames)
- Claris Resolve/Wingz: try to decode encrypted files

2/14/2014:
- Wingz: add a spreadsheet parser (only export spreadsheet's content
  but not the frames)
- check that the output of the different executables are compatible with
  help2man --help-option=-h --version-option=-v --no-discard-stderr EXECUTABLE

2/2/2014:
- AppleWorks/ClarisWorks: add a spreadsheet parser for spreadsheet
  (only export main spreadsheet's content but not the frames), and
  for database(export the main database content row by row as a
  spreadsheet)

1/23/2014:
- add some enums of pure spreadsheet applications...

1/22/2014:
- GreatWorks: add a spreadsheet parser(main content + some graphics)

1/17/2014:
- MicrosoftWorks: add a spreadsheet parser(main content + some graphics)

1/10/2014:
- rename all the parser files to recognize more easily the parser...

1/6/2014:
- BeagleWorks/WordPerfect Work: add code to retrieve chart, very basic,
  ie. retrieve only the data ranges:-~